# server-monitor-rs

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
crates/agent/: Cargo.toml
crates/agent-supervisor/: Cargo.toml
crates/agent-supervisor/src/: ipc.rs  lib.rs  main.rs  staging.rs
crates/agent-supervisor/tests/: staging.rs
crates/agent/src/: collector.rs  config.rs  hardware.rs  lib.rs  main.rs  recordings.rs  register.rs  stream.rs  transport.rs  updates.rs
crates/agent/src/probes/: http.rs  icmp.rs  mod.rs  scheduler.rs  tcp.rs
crates/agent/src/terminal/: mod.rs  pty.rs
crates/common/: Cargo.toml
crates/common/src/: endpoint.rs  error.rs  lib.rs  password.rs  token.rs  version.rs
crates/panel/: Cargo.toml  config.example.yaml
crates/panel/migrations/: 20260424000000_initial.sql  20260424000001_metrics.sql  20260424000002_auth.sql  20260425000000_probes.sql  20260426000000_terminal.sql  20260427000000_updates.sql  20260428000000_recording_default_on.sql  20260429000000_panel_public_url.sql
crates/panel/src/: config.rs  db.rs  http_server.rs  lib.rs  live.rs  main.rs  settings.rs  shutdown.rs  state.rs  telemetry.rs
crates/panel/src/api/: agents.rs  auth.rs  groups.rs  installer.rs  metrics.rs  mod.rs  probes.rs  servers.rs  settings.rs  setup.rs  static_files.rs  terminal_ws.rs  terminals.rs  totp.rs  updates.rs  users.rs  ws.rs
crates/panel/src/auth/: audit.rs  backup_codes.rs  cookie.rs  csrf.rs  extract.rs  mod.rs  password.rs  request.rs  session.rs  totp.rs
crates/panel/src/grpc/: agent_service.rs  mod.rs  server.rs  session.rs
crates/panel/src/metrics/: mod.rs  rollup.rs
crates/panel/src/probes/: ingest.rs  mod.rs  rollup.rs  scheduler.rs
crates/panel/src/terminal/: hub.rs  mod.rs  recordings.rs
crates/panel/src/updates/: dispatch.rs  mod.rs  poller.rs  rollout.rs
crates/panel/tests/: auth_flow.rs  dev_api.rs  metrics_api.rs  metrics_ingest.rs  probes.rs  register_rpc.rs  setup.rs  stream_rpc.rs  terminal.rs  totp_flow.rs  updates.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/monitor/v1/: agent.proto
crates/proto/src/: lib.rs
deploy/: README.md  install-agent.ps1  install-agent.sh  install-panel.sh
deploy/docker/: .env.example  Caddyfile.tmpl  Dockerfile.panel  docker-compose.yml
docs/: CHANGELOG.md  release-process.md
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html  asciinema-player.d.ts
frontend/src/lib/: RecordingPlayer.svelte  SiteHeader.svelte  Terminal.svelte  api.ts  auth.svelte.ts  format.ts
frontend/src/lib/primitives/: Badge.svelte  Panel.svelte  SectionHeader.svelte  Sparkline.svelte  Stat.svelte  StatusDot.svelte  TimeSeriesChart.svelte  index.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/design/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/probes/: +page.svelte
frontend/src/routes/probes/[id]/: +page.svelte
frontend/src/routes/servers/[id]/: +page.svelte
frontend/src/routes/servers/[id]/terminal/: +page.svelte
frontend/src/routes/settings/: +layout.svelte  +page.svelte
frontend/src/routes/settings/audit/: +page.svelte
frontend/src/routes/settings/general/: +page.svelte
frontend/src/routes/settings/groups/: +page.svelte
frontend/src/routes/settings/security/: +page.svelte
frontend/src/routes/settings/servers/: +page.svelte
frontend/src/routes/settings/updates/: +page.svelte
frontend/src/routes/settings/users/: +page.svelte
frontend/src/routes/setup/: +page.svelte
xtask/: Cargo.toml
xtask/src/: main.rs
