[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/common",
    "crates/panel",
    "crates/agent",
    "crates/agent-supervisor",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lunyxiaoluny/server-monitor-rs"
authors = ["Lu Lin <lunyxiaoluny@gmail.com>"]

[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
# Deny the most common footguns, allow pragmatic patterns.
await_holding_lock = "warn"
dbg_macro = "warn"
todo = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
# Async runtime & utilities
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1"

# gRPC / protobuf
tonic = { version = "0.12", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP server
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "fs"] }
hyper = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
    "json",
    "migrate",
    "macros",
] }

# Serde / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
figment = { version = "0.10", features = ["yaml", "env"] }
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto / identity
rustls = "0.23"
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
totp-rs = { version = "5", default-features = false, features = ["otpauth", "gen_secret"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# System info (Agent)
sysinfo = "0.32"

# Network probes (Agent-side)
surge-ping = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

# Utility
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
url = "2"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
once_cell = "1"
regex = "1"
hostname = "0.4"

# Internal crates — members pick `features = ["server"]` or `["client"]` explicitly.
monitor-proto = { path = "crates/proto", default-features = false }
monitor-common = { path = "crates/common" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2
