[package]
name = "monitor-agent-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Long-lived supervisor that manages the monitor-agent lifecycle and self-updates"
default-run = "monitor-agent-supervisor"

[lints]
workspace = true

[[bin]]
name = "monitor-agent-supervisor"
path = "src/main.rs"

[dependencies]
monitor-common = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
