[package]
name = "monitor-agent-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Long-lived supervisor that manages the monitor-agent lifecycle and self-updates"
default-run = "monitor-agent-supervisor"

[lints]
workspace = true

[lib]
name = "monitor_agent_supervisor"
path = "src/lib.rs"

[[bin]]
name = "monitor-agent-supervisor"
path = "src/main.rs"

[dependencies]
monitor-common = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

reqwest = { workspace = true }
sha2 = { workspace = true }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
hyper = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
