[package]
name = "monitor-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, configuration loading, and utilities for server-monitor-rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true }
