[package]
name = "monitor-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Protobuf definitions and tonic-generated code for server-monitor-rs"

[lints]
workspace = true

[features]
default = ["server", "client"]
server = []
client = []

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
